--- a/launch.html
+++ b/launch.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <script type="text/javascript" src="tcp-server.js"></script>
+    <script type="text/javascript" src="socks-proxy.js"></script>
     <script type="text/javascript" src="launch.js"></script>
   </head>
   <body>
