--- a/launch.html
+++ b/launch.html
@@ -1,6 +1,7 @@
 <!doctype HTML>
 <html>
   <head>
+    <script type="text/javascript" src="dnsutils.js"></script>
     <script type="text/javascript" src="tcp-server.js"></script>
     <script type="text/javascript" src="socks-proxy.js"></script>
     <script type="text/javascript" src="node-chrome-support.js"></script>
