--- a/launch.html
+++ b/launch.html
@@ -5,6 +5,10 @@
     <script type="text/javascript" src="tcp-server.js"></script>
     <script type="text/javascript" src="socks-proxy.js"></script>
     <script type="text/javascript" src="node-chrome-support.js"></script>
+    <script type="text/javascript" src="node-chrome-stream.js"></script>
+    <script type="text/javascript" src="node-chrome-stream-readable.js"></script>
+    <script type="text/javascript" src="node-chrome-stream-writable.js"></script>
+    <script type="text/javascript" src="node-chrome-stream-duplex.js"></script>
     <script type="text/javascript" src="node-chrome-socket.js"></script>
     <script type="text/javascript" src="node-xmpp-browser.js"></script>
     <script type="text/javascript" src="launch.js"></script>
