--- a/launch.html
+++ b/launch.html
@@ -4,6 +4,7 @@
     <script type="text/javascript" src="tcp-server.js"></script>
     <script type="text/javascript" src="socks-proxy.js"></script>
     <script type="text/javascript" src="node-xmpp-browser.js"></script>
+    <script type="text/javascript" src="oauth.js"></script>
     <script type="text/javascript" src="launch.js"></script>
   </head>
   <body>
