Roster list printed out, capabailities emitted

--- a/launch.html
+++ b/launch.html
@@ -5,6 +5,7 @@
     <script type="text/javascript" src="socks-proxy.js"></script>
     <script type="text/javascript" src="node-xmpp-browser.js"></script>
     <script type="text/javascript" src="oauth.js"></script>
+    <script type="text/javascript" src="xmppDaemon.js"></script>
     <script type="text/javascript" src="launch.js"></script>
   </head>
   <body>
