refactor xmpp into a freedom module

--- a/worker-app/launch.html
+++ b/worker-app/launch.html
@@ -2,12 +2,18 @@
 <html>
   <head>
     <title>UProxy</title>
+    <!--
     <script type="text/javascript" src="tcp-server.js"></script>
     <script type="text/javascript" src="socks-proxy.js"></script>
     <script type="text/javascript" src="node-xmpp-browser.js"></script>
     <script type="text/javascript" src="oauth.js"></script>
     <script type="text/javascript" src="xmppDaemon.js"></script>
     <script type="text/javascript" src="launch.js"></script>
+    -->
+    <script type="text/javascript"
+        src="freedom.js"
+        data-manifest="proxy.json">
+    </script>
     <link rel="stylesheet" href="style.css" type="text/css" />
   </head>
   <body>
@@ -17,6 +23,5 @@
         <img src='images/uproxy-19.png' />
       </button>
     </section>
-    <webview src="about:blank"></webview>
   </body>
 </html>
