--- a/app/launch.html
+++ b/app/launch.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="launch.js"></script>
     -->
     <script type="text/javascript"
-        src="freedom.js"
+        src="js/freedom/freedom.js"
         data-manifest="proxy.json">
     </script>
     <link rel="stylesheet" href="style.css" type="text/css" />
