Reorging code to prep for app/ext plumbing

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -23,7 +23,8 @@
       -
       - [1]: http://developer.chrome.com/extensions/contentSecurityPolicy.html
      -->
-    <script src="popup.js"></script>
+    <script src="js/plumbing.js"/>
+    <script src="js/popup.js"></script>
   </head>
   <body>
     Blah blah blah
