--- a/app/launch.html
+++ b/app/launch.html
@@ -10,9 +10,10 @@
     <script type="text/javascript" src="xmppDaemon.js"></script>
     <script type="text/javascript" src="launch.js"></script>
     -->
+    <script src="js/plumbing.js"/>
     <script type="text/javascript"
         src="js/freedom/freedom.js"
-        data-manifest="proxy.json">
+        data-manifest="js/uproxy.json">
     </script>
     <link rel="stylesheet" href="style.css" type="text/css" />
   </head>
