--- a/extension/popup.html
+++ b/extension/popup.html
@@ -23,7 +23,8 @@
       -
       - [1]: http://developer.chrome.com/extensions/contentSecurityPolicy.html
      -->
-    <script src="js/plumbing.js"/>
+    <!--script src="js/plumbing.js"/-->
+    <script src="js/unfreedom.js"></script>
     <script src="js/popup.js"></script>
   </head>
   <body>
