Setup message passing between app/ext using freedom objects

--- a/app/launch.html
+++ b/app/launch.html
@@ -10,11 +10,11 @@
     <script type="text/javascript" src="xmppDaemon.js"></script>
     <script type="text/javascript" src="launch.js"></script>
     -->
-    <script src="js/plumbing.js"/>
     <script type="text/javascript"
         src="js/freedom/freedom.js"
         data-manifest="js/uproxy.json">
     </script>
+    <script src="js/plumbing.js"></script>
     <link rel="stylesheet" href="style.css" type="text/css" />
   </head>
   <body>
