Hooked up basic UI to the FreeDOM plumbing

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -23,9 +23,14 @@
       -
       - [1]: http://developer.chrome.com/extensions/contentSecurityPolicy.html
      -->
-    <script src="js/popup.js"></script>
   </head>
   <body>
-    Blah blah blah
+    <div>Josh, please make this pretty :-)</div>
+    <div id='buttons'>
+      <input type='text' id='msg_input'>
+    </div>
+    <div id='msg_log' class='text'>
+    </div>
   </body>
+  <script src="js/popup.js"></script>
 </html>
