--- a/app/launch.html
+++ b/app/launch.html
@@ -2,22 +2,19 @@
 <html>
   <head>
     <title>UProxy</title>
-    <!--
     <script type="text/javascript" src="tcp-server.js"></script>
     <script type="text/javascript" src="socks-proxy.js"></script>
-    <script type="text/javascript" src="node-xmpp-browser.js"></script>
+    <script type="text/javascript" src="identity/node-xmpp-browser.js"></script>
     <script type="text/javascript" src="oauth.js"></script>
-    <script type="text/javascript" src="xmppDaemon.js"></script>
-    <script type="text/javascript" src="launch.js"></script>
-    -->
+    <script type="text/javascript" src="identity/xmppDaemon.js"></script>
+    <script type="text/javascript" src="js/launch.js"></script>
     <link rel="stylesheet" href="style.css" type="text/css" />
+    <style>
+      body {
+        padding: 15px;
+      }
+    </style>
   </head>
   <body>
-    <section id='head'>
-      <input type='text' id='url' />
-      <button id='settings'>
-        <img src='images/uproxy-19.png' />
-      </button>
-    </section>
   </body>
 </html>
