--- a/extension/popup.html
+++ b/extension/popup.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html ng-app="UProxyExt" ng-csp>
   <head>
     <title>UProxy Picker Popup</title>
     <style>
@@ -23,9 +23,12 @@
       -
       - [1]: http://developer.chrome.com/extensions/contentSecurityPolicy.html
      -->
+    <script src="bower_components/angular/angular.js"></script>
+    <script src="oauth2/oauth2.js"></script>
+    <script src="js/app.js"></script>
     <script src="js/popup.js"></script>
   </head>
-  <body>
-    Blah blah blah
+  <body ng-cloak ng-controller="MainCtrl">
+    <button ng-click="sendCredentials()">Send Credentials</button>
   </body>
 </html>
