Fixed a bug in message passing

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -30,5 +30,7 @@
   </head>
   <body ng-cloak ng-controller="MainCtrl">
     <button ng-click="sendCredentials()">Send Credentials</button>
+    <input id='msg_input' class='text'>
+    <div id='msg_log'></div>
   </body>
 </html>
