Fixed echo identity demo

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -46,7 +46,7 @@
       <input id='msg_input' class='text'>
       <div>
         <li ng-repeat='msg in uproxy.msg_log'>
-          {{msg}}
+          {{msg.message}}
         </li>
       </div>
     </div>
