initial version of completed, untested socks proxy with tcp-server2

--- a/chrome/app/launch.html
+++ b/chrome/app/launch.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <title>UProxy</title>
-    <script type="text/javascript" src="tcp-server.js"></script>
-    <script type="text/javascript" src="socks-proxy.js"></script>
-    <script type="text/javascript" src="identity/node-xmpp-browser.js"></script>
+    <script type="text/javascript" src="proxy/tcp-server2.js"></script>
+    <script type="text/javascript" src="proxy/socks.js"></script>
+    <!-- <script type="text/javascript" src="identity/node-xmpp-browser.js"></script>
     <script type="text/javascript" src="oauth.js"></script>
     <script type="text/javascript" src="identity/xmppDaemon.js"></script>
-    <script type="text/javascript" src="js/launch.js"></script>
+    <script type="text/javascript" src="js/launch.js"></script> -->
     <link rel="stylesheet" href="style.css" type="text/css" />
     <style>
       body {
