--- a/chrome/app/launch.html
+++ b/chrome/app/launch.html
@@ -2,8 +2,6 @@
 <html>
   <head>
     <title>UProxy</title>
-    <script type="text/javascript" src="proxy/tcp-server2.js"></script>
-    <script type="text/javascript" src="proxy/socks.js"></script>
     <!-- <script type="text/javascript" src="identity/node-xmpp-browser.js"></script>
     <script type="text/javascript" src="oauth.js"></script>
     <script type="text/javascript" src="identity/xmppDaemon.js"></script>
@@ -16,5 +14,8 @@
     </style>
   </head>
   <body>
+    <script type="text/javascript" src="proxy/tcp-server2.js"></script>
+    <script type="text/javascript" src="proxy/socks.js"></script>
+    <script type="text/javascript" src="proxy/socks_test.js"></script>
   </body>
 </html>
