code improvements; show entire state in debug view
(not just roster)

--- a/chrome/extension/app/popup.html
+++ b/chrome/extension/app/popup.html
@@ -28,8 +28,8 @@
         </div>
 
         <details open>
-          <summary>Roster</summary>
-          <pre>{{ model.roster | json }}</pre>
+          <summary>state</summary>
+          <pre>{{ model | json }}</pre>
         </details>
       </div>
     </details>
