--- a/chrome/app/launch.html
+++ b/chrome/app/launch.html
@@ -14,8 +14,12 @@
     </style>
   </head>
   <body>
+    <script type="text/javascript" src="submodules/uproxy-common/encoding.js"></script>
     <script type="text/javascript" src="proxy/tcp-server2.js"></script>
     <script type="text/javascript" src="proxy/socks.js"></script>
-    <script type="text/javascript" src="proxy/socks_test.js"></script>
+    <!--<script type="text/javascript" src="proxy/socks_test.js"></script>-->
+    <script type="text/javascript" src="proxy/webRtcUtil.js"></script>
+    <script type="text/javascript" src="proxy/webRtcRelayer.js"></script>
+    <script type="text/javascript" src="proxy/socksWebRtc.js"></script>
   </body>
 </html>
