back to functional demo

--- a/chrome/app/launch.html
+++ b/chrome/app/launch.html
@@ -17,9 +17,12 @@
     <script type="text/javascript" src="submodules/uproxy-common/encoding.js"></script>
     <script type="text/javascript" src="proxy/tcp-server2.js"></script>
     <script type="text/javascript" src="proxy/socks.js"></script>
-    <!--<script type="text/javascript" src="proxy/socks_test.js"></script>-->
+    <script type="text/javascript" src="proxy/socks_test.js"></script>
     <script type="text/javascript" src="proxy/webRtcUtil.js"></script>
     <script type="text/javascript" src="proxy/webRtcRelayer.js"></script>
+
+    <!--
     <script type="text/javascript" src="proxy/socksWebRtc.js"></script>
+    -->
   </body>
 </html>
