--- a/firefox/data/popup.html
+++ b/firefox/data/popup.html
@@ -7,7 +7,7 @@
     <!-- build:js scripts/popup.js -->
     <script src="lib/jsonpatch.js"></script>
     <script src="lib/angular.js"></script>
-    <script src="oauth2/oauth2.js"></script>
+    <script src="lib/oauth2/lib/oauth2.js"></script>
 
     <script src="js/popup.js"></script>
     <!-- endbuild -->
