--- a/firefox/data/popup.html
+++ b/firefox/data/popup.html
@@ -7,13 +7,15 @@
     <!-- build:js scripts/popup.js -->
     <script src="lib/jsonpatch.js"></script>
     <script src="lib/angular.js"></script>
-    <script src="lib/oauth2/lib/oauth2.js"></script>
-
+    <script src="submodules/oauth2/lib/oauth2.js"></script>
+    
+    <script src="js/freedom_shim.js"></script>
+    <script src="js/app.js"></script>
     <script src="js/popup.js"></script>
     <!-- endbuild -->
 
   </head>
-  <body ng-controller="MainCtrl">
+  <body ng-controller="MainCtrl" id="popup">
 
     <h4>{{'appName'|chromei18n}}</h4>
 
