--- a/firefox/data/freedom-page-worker.html
+++ b/firefox/data/freedom-page-worker.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <script src="lib/freedom.js"></script>
+    <script src="submodules/uproxy-common/submodules/freedom/freedom.js" data-manifest="submodules/uproxy-common/uproxy.json"></script>
+    <script src="js/freedom_shim_freedom.js"></script>
   </head>
   <body>
   </body>
