--- a/firefox/data/popup.html
+++ b/firefox/data/popup.html
@@ -9,9 +9,10 @@
     <script src="lib/angular.js"></script>
     <script src="submodules/oauth2/lib/oauth2.js"></script>
     
-    <script src="js/freedom_shim.js"></script>
+    <script src="js/freedom_shim_content.js"></script>
     <script src="js/app.js"></script>
     <script src="js/popup.js"></script>
+    <Script src="js/popup_init.js"></script>
     <!-- endbuild -->
 
   </head>
