add give/get mode option, mock give access management
also rename 'oauth-credentials' message to 'gtalk-credentials' (accompanies
UWNetworksLab/uproxy-common@7b1cf165)

--- a/chrome/extension/src/options.html
+++ b/chrome/extension/src/options.html
@@ -19,6 +19,14 @@
 
     <ul class="options">
       <li>
+        <div class="btn-group">
+          <button class="btn btn-success" ng-click="changeOption('mode', 'give')"
+            ng-disabled="inGiveMode" ng-class="{active: inGiveMode}">{{'giveAccess'|chromei18n}}</button>
+          <button class="btn btn-warning" ng-click="changeOption('mode', 'get')"
+            ng-disabled="inGetMode" ng-class="{active: inGetMode}">{{'getAccess'|chromei18n}}</button>
+        </div>
+      </li>
+      <li>
         <label class="checkbox inline">
           <input type="checkbox">
           option one
