--- a/chrome/extension/src/popup.html
+++ b/chrome/extension/src/popup.html
@@ -103,6 +103,12 @@
         </details>
 
         <details open>
+          <summary>Chat</summary>
+            <select ng-model="chatbuddy" ng-options="card.name for (id, card) in model.roster">
+            </select>
+        </details>
+
+        <details open>
           <summary>state</summary>
           <pre>{{model | json}}</pre>
         </details>
