include oauth2 lib via bower rather than git submodule in chrome extension

--- a/chrome/extension/src/popup.html
+++ b/chrome/extension/src/popup.html
@@ -8,7 +8,7 @@
     <!-- build:js scripts/popup.js -->
     <script src="bower_components/jsonpatch/lib/jsonpatch.js"></script>
     <script src="bower_components/angular/angular.js"></script>
-    <script src="oauth2/oauth2.js"></script>
+    <script src="bower_components/oauth2-extensions/lib/oauth2.js"></script>
 
     <script src="scripts/app.js"></script>
     <script src="scripts/popup.js"></script>
