--- a/firefox/data/freedom-page-worker.html
+++ b/firefox/data/freedom-page-worker.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <script src="js/socket_firefox.js"></script>
+    <script src="js/view_oauth.js"></script>
+    <script src="js/plumbing.js"></script>
     <script src="submodules/uproxy-common/submodules/freedom/freedom.js" data-manifest="submodules/uproxy-common/uproxy.json"></script>
     <script src="js/freedom_shim_freedom.js"></script>
   </head>
