--- a/chrome/extension/src/options.html
+++ b/chrome/extension/src/options.html
@@ -7,7 +7,9 @@
 
     <!-- build:js scripts/options.js -->
     <script src="bower_components/jsonpatch/lib/jsonpatch.js"></script>
+    <script src="bower_components/lodash/dist/lodash.mobile.js"></script>
     <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-lodash/angular-lodash.js"></script>
     <script src="bower_components/oauth2-extensions/lib/oauth2.js"></script>
 
     <script src="scripts/app.js"></script>
