--- a/chrome/extension/src/popup.html
+++ b/chrome/extension/src/popup.html
@@ -71,7 +71,7 @@
       </section>
 
       <section class="start-getting-through" ng-show="isEmpty(contactsMessageableCanGetFrom)">
-        <h5>Don't have permission to get access through anyone currently online.</h5>
+        <h5>No one online you can get access through.</h5>
       </section>
 
       <section class="start-getting-through" ng-hide="isEmpty(contactsMessageableCanGetFrom)">
